# distance-music-bot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/external_backend/base/: __init__.py  external_backend.py
src/external_backend/spotify/: __init__.py  spotify_external_backend.py
src/external_backend/youtube/: __init__.py  youtube_external_backend.py
src/helpers/: exceptions.py  logger.py  login.py  playlist.py  root.py  validators.py
src/scripts/: login.py  login_to_youtube.py  test_spotify.py
